# agentstick

./: README.md  README.zh-CN.md
.github/workflows/: deploy-website.yml  release.yml
desktop/: README.md
desktop/linux/: README.md
desktop/macos/: Package.swift
desktop/macos/Config/: config.example.toml
desktop/macos/Resources/: AppIcon.icns
desktop/macos/Sources/AgentStickApp/: ASRWebSocketClient.swift  AgentApprovalCenter.swift  AgentCLIRunner.swift  AgentMemoryStore.swift  AgentSessionStore.swift  AgentTaskCaptureController.swift  AgentTaskHistoryWindowController.swift  AppConfig.swift  AppDelegate.swift  BleCentral.swift  BleProtocol.swift  CodexAppServerClient.swift  CodexInteractiveRunner.swift  FirmwareUpdateWindowController.swift  Info.plist  InputInjector.swift  L10n.swift  OggOpusMuxer.swift  OnboardingWindowController.swift  PairDeviceWindowController.swift  SettingsWindowController.swift  StatusController.swift  VoiceStickCloudAPI.swift  VoiceStickCoordinator.swift
desktop/macos/Sources/AgentStickCore/: AgentDisplayTitle.swift  AgentEventBridge.swift  AgentHookPayloads.swift  AgentResponseClassifier.swift  AgentTaskEvent.swift  AgentTaskMonitor.swift
desktop/macos/Sources/AgentStickHooks/: main.swift
desktop/macos/Sources/VoiceStickApp/: ASRWebSocketClient.swift  AppConfig.swift  BleCentral.swift  Info.plist  OnboardingWindowController.swift  OverlayController.swift  SettingsWindowController.swift  VoiceStickCloudAPI.swift
desktop/macos/Tests/AgentStickAppTests/: main.swift
desktop/windows/: CMakeLists.txt  README.md
desktop/windows/installer/: AgentStick.wxs  license.rtf  zh-CN.wxl
desktop/windows/resources/: AgentStick.rc  resource.h
desktop/windows/src/: agent_stick_cloud_api_win.cc  agent_stick_cloud_api_win.h  agent_stick_coordinator.cc  agent_stick_coordinator.h  app_config.cc  app_config.h  asr_client_win.cc  asr_client_win.h  asr_protocol.cc  asr_protocol.h  ble_central_win.cc  ble_central_win.h  ble_protocol.cc  ble_protocol.h  byte_utils.h  debug_audio_recorder.cc  debug_audio_recorder.h  dpi_util.h  firmware_manifest.cc  firmware_manifest.h  firmware_update_dialog.cc  firmware_update_dialog.h  input_injector_win.cc  input_injector_win.h  l10n.cc  l10n.h  llm_translation_client.cc  llm_translation_client.h  log.cc  log.h  main.cc  ogg_crc.cc  ogg_crc.h  ogg_opus_muxer.cc  ogg_opus_muxer.h  onboarding_dialog.cc  onboarding_dialog.h  overlay_window.cc  overlay_window.h  pair_device_dialog.cc  (+8 more)
desktop/windows/tests/: core_tests.cc
docs/: hail-product-definition.md  lichuang-esp32s3-xiaozhi-notes.md  lichuang-local-adaptation-summary.md  protocol.md  release.md  volcengine-asr.md
docs/superpowers/plans/: 2026-06-10-agent-task-capture-fixed-sounds.md
firmware/: CMakeLists.txt  partitions_ota.csv  sdkconfig.defaults  sdkconfig.defaults.m5stack
firmware/components/audio_pipeline/: CMakeLists.txt  audio_pipeline.c  audio_playback.c
firmware/components/audio_pipeline/include/: audio_pipeline.h  audio_playback.h
firmware/components/stick_s3_board/: Kconfig  stick_s3_board.c
firmware/components/stick_s3_board/include/: stick_s3_board.h
firmware/components/ui_status/: CMakeLists.txt  ui_status.c  ui_status_icons.c  ui_status_icons.h
firmware/components/ui_status/include/: ui_status.h
firmware/components/voice_ble/: CMakeLists.txt  voice_ble.c
firmware/components/voice_ble/include/: voice_ble.h
firmware/main/: main.c
scripts/: build-macos.sh  build-msi.bat  make-dmg.sh  probe_asr_websocket_ping.py  test_agent_cli_mode.sh  test_agent_task_capture.sh  test_interaction_latency.sh  update-appcast.py
website/: README.md  index.html  package-lock.json  package.json  vite.config.js
website/public/: appcast.xml
website/src/: App.vue
website/src/i18n/: en-US.json  index.js  zh-CN.json
