idf_component_register(
    SRCS "ui_status.c" "ui_status_icons.c"
    INCLUDE_DIRS "include" "."
    EMBED_FILES
        "assets/clawd_frames_5f/clawd_boot_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_boot_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_boot_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_pairing_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_pairing_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_pairing_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_idle_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_idle_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_idle_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_resting_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_resting_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_resting_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_recording_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_recording_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_recording_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_transcribing_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_transcribing_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_transcribing_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_thinking_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_thinking_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_thinking_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_notification_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_notification_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_notification_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_ota_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_ota_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_ota_4_argb8888.bin"
        "assets/clawd_frames_5f/clawd_error_0_argb8888.bin"
        "assets/clawd_frames_5f/clawd_error_2_argb8888.bin"
        "assets/clawd_frames_5f/clawd_error_4_argb8888.bin"
    REQUIRES driver esp_driver_ledc esp_lcd esp_timer stick_s3_board lvgl
)
